--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,6 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 body {
   background-color: #0e0e0e;
+  background-image: url("/Simple Shiny(1).svg");
+  background-repeat: no-repeat;
   -webkit-transition: 0.5s;
   transition: 0.5s;
   font-family: "Poppins", sans-serif;
