--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -2,6 +2,8 @@
 
 body {
   background-color: #0e0e0e;
+  background-image: url("/Simple\ Shiny\(1\).svg");
+  background-repeat: no-repeat;
   transition: 0.5s;
   font-family: "Poppins", sans-serif;
 }
