--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -164,15 +164,15 @@ html {
 }
 
 .container header nav ul li a {
-  -webkit-transition: 0.5s ease-out;
-  transition: 0.5s ease-out;
+  -webkit-transition: 0.4s ease-out;
+  transition: 0.4s ease-out;
   color: rgba(255, 255, 255, 0.493);
 }
 
 .container header nav ul li a:hover {
-  -webkit-transition: 0.5s ease-in;
-  transition: 0.5s ease-in;
-  color: #908282;
+  -webkit-transition: 0.2s ease-in;
+  transition: 0.2s ease-in;
+  color: #ffffff;
 }
 
 .container header nav img {
