--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -100,13 +100,13 @@ html {
           transition: 0.5s ease-in-out;
 
           a {
-            transition: 0.5s ease-out;
+            transition: 0.4s ease-out;
             color: rgba(255, 255, 255, 0.493);
           }
 
           a:hover {
-            transition: 0.5s ease-in;
-            color: #908282;
+            transition: 0.2s ease-in;
+            color: #ffffff;
           }
         }
       }
