--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -158,21 +158,23 @@ html {
 .container header nav ul li {
   text-transform: uppercase;
   font-size: 1.3rem;
-  margin: auto 1rem;
+  margin: auto 0.1rem;
   -webkit-transition: 0.5s ease-in-out;
   transition: 0.5s ease-in-out;
 }
 
-.container header nav ul li a {
+.container header nav ul li .btn {
+  margin: 0rem 0.834rem;
   -webkit-transition: 0.4s ease-out;
   transition: 0.4s ease-out;
   color: rgba(255, 255, 255, 0.493);
 }
 
-.container header nav ul li a:hover {
+.container header nav ul li .active,
+.container header nav ul li .btn:hover {
   -webkit-transition: 0.2s ease-in;
   transition: 0.2s ease-in;
-  color: #ffffff;
+  color: white;
 }
 
 .container header nav img {
