--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -92,21 +92,22 @@ html {
       ul {
         display: flex;
         list-style: none;
-
         li {
           text-transform: uppercase;
           font-size: 1.3rem;
-          margin: auto 1rem;
+          margin: auto 0.1rem;
           transition: 0.5s ease-in-out;
 
-          a {
+          .btn {
+            margin: 0rem 0.834rem;
             transition: 0.4s ease-out;
             color: rgba(255, 255, 255, 0.493);
           }
 
-          a:hover {
+          .active,
+          .btn:hover {
             transition: 0.2s ease-in;
-            color: #ffffff;
+            color: rgb(255, 255, 255);
           }
         }
       }
