--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -2,7 +2,7 @@
 
 body {
   background-color: #0e0e0e;
-  background-image: url("/Simple\ Shiny\(1\).svg");
+  background-image: url("/assets/svg/background.svg");
   background-repeat: no-repeat;
   transition: 0.5s;
   font-family: "Poppins", sans-serif;
@@ -63,10 +63,14 @@ html {
 }
 
 .container {
+  position: absolute;
   margin: 0 auto;
+  top: 0;
   width: 100%;
+  // background-image: url("/assets/svg/pattern.svg");
 
   header {
+    // background-color: rgba(255, 23, 23, 0.774);
     nav {
       animation: swipeFromLeft 1s ease-out;
       transition: 2s;
