--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -522,6 +522,22 @@ html {
   color: #ffffff;
 }
 
+.container section footer .links {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 0 1rem;
+}
+
+.container section footer .links i {
+  margin: 1rem 0.8rem;
+  color: white;
+  font-size: 2.5rem;
+}
+
 input:focus,
 select:focus,
 textarea:focus,
