--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -402,6 +402,18 @@ html {
           }
         }
       }
+
+      .links {
+        display: flex;
+        justify-content: center;
+        padding: 0 1rem;
+
+        i {
+          margin: 1rem 0.8rem;
+          color: white;
+          font-size: 2.5rem;
+        }
+      }
     }
   }
 }
