--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -369,6 +369,10 @@ html {
               width: 30rem;
             }
 
+            #netlify {
+              margin: 1rem 0;
+            }
+
             label {
               color: white;
               font-weight: normal;
