--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -69,7 +69,7 @@ html {
   width: 100%;
 
   header {
-    background-color: rgba(255, 23, 23, 0.774);
+    // background-color: rgba(255, 23, 23, 0.774);
     nav {
       animation: swipeFromLeft 1s ease-out;
       transition: 2s;
@@ -122,7 +122,7 @@ html {
     }
 
     main {
-      background-color: rgba(23, 189, 255, 0.774);
+      // background-color: rgba(23, 189, 255, 0.774);
       display: flex;
       flex-direction: row;
       margin: 15vw;
