--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -361,6 +361,7 @@ html {
 
               img {
                 width: 100%;
+                height: auto;
                 background-position: center;
                 background-repeat: no-repeat;
                 background-size: cover;
